Fixed rounded corners nav bar in dark mode

--- a/Titlebar Enabled/userChrome.css
+++ b/Titlebar Enabled/userChrome.css
@@ -159,7 +159,6 @@ Normal mode
 /*** FOCUS FIX ***/
 #nav-bar:-moz-window-inactive {
     background: linear-gradient(to bottom, #EAEAEA, #E9E9E9) !important;
-    border-radius: 6px 6px 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3), inset 0 0 0 1px rgba(255,255,255,0.2) !important;
 }
 .titlebar-buttonbox:-moz-window-inactive {
@@ -181,13 +180,11 @@ Normal mode
 /*** TILED/MAXIMIZED/FULLSCREEN WINDOW FIXES ***/
 :root[gtktiledwindow="true"] #nav-bar,
 :root[gtktiledwindow="true"] #nav-bar:-moz-window-inactive{
-    border-radius: 6px 6px 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3), inset 0 0 0 1px rgba(255,255,255,0.2) !important;
 }
 :root[sizemode="maximized"] #nav-bar,
 :root[sizemode="maximized"] #nav-bar:-moz-window-inactive,
 :root[sizemode="fullscreen"] #nav-bar {
-    border-radius: 0 0 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.3), inset 0 0 0 1px rgba(255,255,255,0.2) !important;
 }
 #fullscr-toggler {
@@ -755,20 +752,17 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
 /*** TILED/MAXIMIZED/FULLSCREEN WINDOW FIXES ***/
 :root[gtktiledwindow="true"] #nav-bar:-moz-lwtheme-brighttext,
 :root[gtktiledwindow="true"] #nav-bar:-moz-lwtheme-brighttext:-moz-window-inactive{
-    border-radius: 6px 6px 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
 :root[sizemode="maximized"] #nav-bar:-moz-lwtheme-brighttext,
 :root[sizemode="maximized"] #nav-bar:-moz-lwtheme-brighttext:-moz-window-inactive,
 :root[sizemode="fullscreen"] #nav-bar:-moz-lwtheme-brighttext {
-    border-radius: 0 0 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
 
 /*** FOCUS FIX ***/
 #nav-bar:-moz-lwtheme-brighttext:-moz-window-inactive {
     appearance: none !important;
-    border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
@@ -808,7 +802,6 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
 }
 #nav-bar:-moz-lwtheme-brighttext {
     appearance: none !important;
-    border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
@@ -1007,20 +1000,17 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
 /*** TILED/MAXIMIZED/FULLSCREEN WINDOW FIXES ***/
 :root[gtktiledwindow="true"] #nav-bar,
 :root[gtktiledwindow="true"] #nav-bar:-moz-window-inactive{
-    border-radius: 6px 6px 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
 :root[sizemode="maximized"] #nav-bar,
 :root[sizemode="maximized"] #nav-bar:-moz-window-inactive,
 :root[sizemode="fullscreen"] #nav-bar {
-    border-radius: 0 0 0 0 !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
 
 /*** FOCUS FIX for Tweaks ***/
 #nav-bar:-moz-window-inactive {
     appearance: none !important;
-    border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
@@ -1067,7 +1057,6 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
 }
 #nav-bar {
     appearance: none !important;
-    border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
     box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
 }
